--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -5,6 +5,7 @@
 body {
   font-family: Georgia, "Times New Roman", Times, serif;
   color: #555;
+  padding-top: 50px;
 }
 
 h1, .h1,
@@ -35,31 +36,34 @@ h6, .h6 {
  * Masthead for nav
  */
 
-.blog-masthead {
-  background-color: #428bca;
+.navbar-masthead {
+  background-color: #008542;
   -webkit-box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
           box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
 }
 
 /* Nav links */
-.blog-nav-item {
+.navbar-item {
   position: relative;
   display: inline-block;
-  padding: 10px;
+  padding: 12px;
   font-weight: 500;
+  font-size: 18px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #cdddeb;
 }
-.blog-nav-item:hover,
-.blog-nav-item:focus {
+.navbar-item:hover,
+.navbar-item:focus {
   color: #fff;
   text-decoration: none;
 }
 
 /* Active state gets a caret at the bottom */
-.blog-nav .active {
+.navbar .active {
   color: #fff;
 }
-.blog-nav .active:after {
+/*
+.navbar .active:after {
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -72,7 +76,7 @@ h6, .h6 {
   border-bottom: 5px solid;
   border-left: 5px solid transparent;
 }
-
+*/
 
 /*
  * Blog name and description
