--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -3,9 +3,8 @@
  */
 
 body {
-  font-family: Georgia, "Times New Roman", Times, serif;
-  color: #555;
-  padding-top: 50px;
+  font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+  color: #333;
 }
 
 h1, .h1,
@@ -17,7 +16,7 @@ h6, .h6 {
   margin-top: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
-  color: #333;
+  color: #FFFFFF;
 }
 
 
@@ -31,30 +30,38 @@ h6, .h6 {
   }
 }
 
-
 /*
- * Masthead for nav
+ * Navbar CSS
  */
 
-.navbar-masthead {
+.navbar {
   background-color: #008542;
-  -webkit-box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
-          box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
+}
+
+.navbar-brand {
+  padding: 0px;
+}
+.navbar-brand>img {
+  height: 100%;
+  padding-top: 13px;
+  padding-bottom: 5px;
+  width: 50px;
 }
 
 /* Nav links */
-.navbar-item {
-  position: relative;
-  display: inline-block;
-  padding: 12px;
+.nav-item {
   font-weight: 500;
   font-size: 18px;
+  padding-left: 5px;
+  padding-right: 5px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #cdddeb;
 }
-.navbar-item:hover,
-.navbar-item:focus {
+.nav-item:hover,
+.nav-item:focus {
   color: #fff;
+  background-color: rgba(255,255,255,0.3);
+  border-radius: 5px;
   text-decoration: none;
 }
 
@@ -62,96 +69,68 @@ h6, .h6 {
 .navbar .active {
   color: #fff;
 }
-/*
-.navbar .active:after {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  width: 0;
-  height: 0;
-  margin-left: -5px;
-  vertical-align: middle;
-  content: " ";
-  border-right: 5px solid transparent;
-  border-bottom: 5px solid;
-  border-left: 5px solid transparent;
-}
-*/
+
+
 
 /*
- * Blog name and description
+ * Single page app styling
  */
 
-.blog-header {
+.page-section {
+  min-height: 85vh;
+  padding: 100px;
+  background-color: #ddd;
+}
+
+.row-content {
+  margin-top: 10vh;
+}
+
+
+/*
+ * Image styles
+ */
+
+.bg-image {
+  min-height: 600px;
+  background: url("../images/etu.jpg") no-repeat center center;
+  background-size: cover;
+}
+
+.img-fluid {
+  max-height: 300px;
+}
+
+
+/*
+ * Text styles
+ */
+
+.title-text {
+    position: relative;
+    margin-top: 40vh;
+}
+
+.title-text > h1 {
+    margin: 0;
+    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    font-size: 5em;
+}
+
+
+.paragraph-text {
   padding-top: 20px;
   padding-bottom: 20px;
-}
-.blog-title {
-  margin-top: 30px;
-  margin-bottom: 0;
-  font-size: 60px;
-  font-weight: normal;
-}
-.blog-description {
   font-size: 20px;
-  color: #999;
+  color: #555;
+}
+
+.ingress-text {
+  font-size: 30px;
+  color: #bbb;
 }
 
 
-/*
- * Main column and sidebar layout
- */
-
-.blog-main {
-  font-size: 18px;
-  line-height: 1.5;
-}
-
-/* Sidebar modules for boxing content */
-.sidebar-module {
-  padding: 15px;
-  margin: 0 -15px 15px;
-}
-.sidebar-module-inset {
-  padding: 15px;
-  background-color: #f5f5f5;
-  border-radius: 4px;
-}
-.sidebar-module-inset p:last-child,
-.sidebar-module-inset ul:last-child,
-.sidebar-module-inset ol:last-child {
-  margin-bottom: 0;
-}
-
-
-/* Pagination */
-.pager {
-  margin-bottom: 60px;
-  text-align: left;
-}
-.pager > li > a {
-  width: 140px;
-  padding: 10px 20px;
-  text-align: center;
-  border-radius: 30px;
-}
-
-
-/*
- * Blog posts
- */
-
-.blog-post {
-  margin-bottom: 60px;
-}
-.blog-post-title {
-  margin-bottom: 5px;
-  font-size: 40px;
-}
-.blog-post-meta {
-  margin-bottom: 20px;
-  color: #999;
-}
 
 
 /*
@@ -162,8 +141,8 @@ h6, .h6 {
   padding: 40px 0;
   color: #999;
   text-align: center;
-  background-color: #f9f9f9;
-  border-top: 1px solid #e5e5e5;
+  background-color: #006631;
+  border-top: 2px solid #555555;
 }
 .blog-footer p:last-child {
   margin-bottom: 0;
