--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -20,56 +20,6 @@ h6, .h6 {
 }
 
 
-/*
- * Override Bootstrap's default container.
- */
-
-@media (min-width: 1200px) {
-  .container {
-    width: 970px;
-  }
-}
-
-/*
- * Navbar CSS
- */
-
-.navbar {
-  background-color: #008542;
-}
-
-.navbar-brand {
-  padding: 0px;
-}
-.navbar-brand>img {
-  height: 100%;
-  padding-top: 13px;
-  padding-bottom: 5px;
-  width: 50px;
-}
-
-/* Nav links */
-.nav-item {
-  font-weight: 500;
-  font-size: 18px;
-  padding-left: 5px;
-  padding-right: 5px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #cdddeb;
-}
-.nav-item:hover,
-.nav-item:focus {
-  color: #fff;
-  background-color: rgba(255,255,255,0.3);
-  border-radius: 5px;
-  text-decoration: none;
-}
-
-/* Active state gets a caret at the bottom */
-.navbar .active {
-  color: #fff;
-}
-
 
 
 /*
@@ -80,6 +30,7 @@ h6, .h6 {
   min-height: 85vh;
   padding: 100px;
   background-color: #ddd;
+  background-image: none;
 }
 
 .row-content {
@@ -93,7 +44,10 @@ h6, .h6 {
 
 .bg-image {
   min-height: 600px;
-  background: url("../images/etu.jpg") no-repeat center center;
+  background-image: none;
+  background-repeat: no-repeat;
+  background-attachment: center;
+  background-position: center;
   background-size: cover;
 }
 
