--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -25,9 +25,9 @@
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-li.active,
-.nav-item:hover,
-.nav-item:focus {
+.navbar li.active,
+.navbar .nav-item:hover,
+.navbar .nav-item:focus {
   color: #ffffff;
   background-color: rgba(255,255,255,0.3);
   border-radius: 5px;
