--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -11,13 +11,19 @@
   padding: 20px;
   overflow-x: hidden;
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-  border-right: 1px solid #eee;
+  background-color: #aaa;
 }
 
 /* Sidebar navigation */
 .sidebar {
-  padding-left: 0;
+  padding-left: 20px;
   padding-right: 0;
+}
+
+.sidebar-toggle {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 30px;
 }
 
 .sidebar .nav {
@@ -35,3 +41,24 @@
 .sidebar .nav-link {
   border-radius: 0;
 }
+
+a:link {
+    text-decoration: none;
+}
+
+
+
+/* Sick animations */
+.rotate{
+    -moz-transition: all 400ms;
+    -webkit-transition: all 400ms;
+    transition: all 400ms;
+}
+
+.rotate.down{
+    -ms-transform:rotate(90deg);
+    -moz-transform:rotate(90deg);
+    -webkit-transform:rotate(90deg);
+    transform:rotate(90deg);
+}
+
