--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -4,6 +4,7 @@
 
 .navbar {
   background-color: rgb(0,133,66);
+  box-shadow: 0px -15px 20px 10px #000;
 }
 
 .navbar-brand {
@@ -25,11 +26,15 @@
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.navbar li.active,
-.navbar .nav-item:hover,
-.navbar .nav-item:focus {
+.nav-link {
+  color: #fff;
+}
+
+
+li.active,
+.nav-item:hover,
+.nav-item:focus {
   color: #ffffff;
   background-color: rgba(255,255,255,0.3);
   border-radius: 5px;
 }
-
