--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -23,6 +23,7 @@
   font-size: 18px;
   padding-left: 5px;
   padding-right: 5px;
+  margin: 5px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
