--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -21,13 +21,10 @@
     margin-left: 30px;
 }
 
-.sidebar .nav {
-  margin-bottom: 20px;
-}
-
 .sidebar .nav-item {
   width: 100%;
   padding-left: 10px;
+  padding-right: 20px;
 }
 
 .sidebar .nav-link {
