--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -27,8 +27,11 @@ p {
 
 .below-image {
     margin-top: -100px;
-    margin-bottom: 10px;
+    margin-bottom: 188px; /* Footer height */
     padding: 40px;
     padding-top: 20px;
     background-color: rgb(240,240,240);
+    height: 100%;
 }
+
+
