--- a/style.css
+++ b/style.css
@@ -6,9 +6,17 @@ Version: 0.0.1
 Tags: Suur-Inkubio, #FuckDrupal
 */
 
+
+html {
+  height: 100%;
+}
+
 body {
   padding-top: 63px; /* Navbar height */
+  position: relative;
+  min-height: 100%;
 }
+
 
 
 /*
@@ -17,6 +25,7 @@ body {
 
 .page-section {
   padding: 10vh;
+  padding-bottom: 188px; /* Footer height */
   background-color: #ddd;
   background-image: none;
 }
