--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -13,6 +13,7 @@
   overflow-x: hidden;
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
   background-color: #aaa;
+  box-shadow: -15px 0px 20px 10px #000;
 }
 
 .sidebar-toggle {
