--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -11,7 +11,7 @@
   padding: 0px;
 }
 .navbar-brand>img {
-  height: 100%;
+  height: 50px;
   padding-top: 13px;
   padding-bottom: 5px;
   width: 50px;
@@ -23,9 +23,10 @@
   font-size: 18px;
   padding-left: 5px;
   padding-right: 5px;
-  margin: 5px;
+  margin-top: 5px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
 
 .nav-link {
   color: #fff;
