More inkubio-font

--- a/assets/css/text.css
+++ b/assets/css/text.css
@@ -21,6 +21,7 @@
 h1 {
   margin: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: inkubio;
   font-size: 5em;
   font-weight: normal;
   color: #FFFFFF;
