--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -4,20 +4,23 @@
 
 .footer {
   padding: 40px 0;
-  color: #999;
+  font-family: coves;
+  font-size: 18px;
+  color: rgb(255, 255, 255);
   text-align: center;
-  background-color: #006631;
+  background-color: rgb(31, 56, 63);
   position: absolute;
   right: 0;
   left: 0;
   bottom: 0;
 }
 
-.footer p {
-  margin: 0;
-  padding-top: 20px;
+.footer a {
+  color: rgb(255, 255, 255);
+  margin-left: 20px;
 }
 
-.footer p:last-child {
-  margin-bottom: 0;
+.footer img {
+  width: 22vw;
+  padding: 1vw;
 }
