--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -15,12 +15,18 @@
   bottom: 0;
 }
 
+.footer .row {
+  width: 98vw;
+  padding-left: 3vw;
+  padding-right: 3vw;
+}
+
 .footer a {
   color: rgb(255, 255, 255);
   margin-left: 20px;
 }
 
 .footer img {
-  width: 22vw;
-  padding: 1vw;
+  width: 100%;
+  padding: 5px;
 }
