--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -31,13 +31,30 @@
   color: rgb(11, 163, 96) !important;
   padding-top: 0;
   padding-bottom: 0;
+  position: relative;
 }
 
+
+.nav-item > .nav-link:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 5px;
+  left: 0;
+  background-color: rgb(11, 163, 96);
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
 
 li.active,
-.nav-item:hover,
+.nav-item > .nav-link:hover:before,
 .nav-item:focus {
-  color: #ffffff;
-  background-color: rgba(255,255,255,0.3);
-  border-radius: 5px;
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
 }
+
