--- a/style.css
+++ b/style.css
@@ -49,8 +49,8 @@ body {
   width: 100%;
   margin-top: 7vw;
   margin-bottom: 7vw;
-  padding-top: 5vw;
-  padding-bottom: 5vw;
+  padding-top: 10vw;
+  padding-bottom: 10vw;
   background: rgb(255, 255, 255);
   -ms-transform: skewy(-7deg); /* IE 9 */
   -webkit-transform: skewY(-7deg); /* Chrome, Safari, Opera */
@@ -61,14 +61,37 @@ body {
   margin: 0;
   padding-left: 5vw;
   padding-right: 5vw;
-  padding-top: 5vw;
   width: 100%;
   -ms-transform: skewY(7deg); /* IE 9 */
   -webkit-transform: skewY(7deg); /* Chrome, Safari, Opera */
   transform: skewY(7deg);
 }
 
+.pill-button {
+  border: 2px solid;
+  border-radius: 50px;
+  border-color: rgb(11, 163, 96);
+  padding: 10px 50px;
+  font-family: coves;
+  font-size: 2em;
+  color: rgb(11, 163, 96);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
 
+.pill-button:hover {
+  border-color: rgb(68, 209, 146);
+  color: rgb(68, 209, 146);
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s;
+}
+
+.title {
+  font-family: coves;
+  font-size: 4em;
+  border-bottom: 2px solid #555;
+  margin-bottom: 20px;
+}
 
 /*
  * Image styles
