--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -1,37 +1,31 @@
+.background {
+  background-image: url("../images/frontpage/pattern-background.jpg");
+  min-height: calc(100vh - 61px - 200px);
+}
+
 h1 {
   margin: 10px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 4em;
   font-weight: normal;
   color: #333;
-  text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
   border-bottom: 2px solid black;
 }
 
 p {
-    padding: 10px;
-    margin-top: 20px;
+  padding: 10px;
+  margin-top: 20px;
 }
 
-.page-bg-image {
-  min-height: 400px;
-  background-image: none;
-  background-repeat: no-repeat;
-  background-attachment: center;
-  background-position: center;
-  background-size: cover;
-  display: block;
-  margin-left: -15px; /* Dirty hacks for full-width image */
-  margin-right: -15px; /* Dirty hacks for full-width image */
-}
-
-.below-image {
-    margin-top: -100px;
-    margin-bottom: 188px; /* Footer height */
-    padding: 40px;
-    padding-top: 20px;
-    background-color: rgb(240,240,240);
-    height: 100%;
+.content-page {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  min-height: 50vh;
+  padding: 40px;
+  padding-top: 20px;
+  margin-top: 80px;
+  margin-bottom: 80px;
+  background-color: rgb(255, 255, 255);
+  height: 100%;
 }
 
 
