--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -5,24 +5,38 @@
 .sidebar {
   height: 100vh;
   z-index: 1005;
-  padding: 10px;
-  padding-top: 88px; /* Navbar height plus padding */
+  padding-top: 60px; /* Navbar height plus padding */
+  padding-left: 0;
+  padding-right: 0;
   overflow-x: hidden;
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-  background-color: #aaa;
+  background: linear-gradient(0deg, rgb(11, 163, 96), rgb(55, 180, 142));
   box-shadow: -15px 0px 20px 10px #000;
 }
 
+.logotext {
+  width: 100%;
+  background-color: rgb(31, 56, 63);
+  margin-bottom: 20px;
+}
+
+
 .sidebar-toggle {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 30px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 30px;
 }
 
 .sidebar .nav-item {
+  font-size: 36px;
+  font-family: coves;
   width: 100%;
   padding-left: 10px;
   padding-right: 20px;
+}
+
+.sidebar .nav-item.active{
+  background-color: rgb(0, 137, 96);
 }
 
 .sidebar .nav-link {
@@ -33,25 +47,8 @@ a:link {
     text-decoration: none;
 }
 
-.navbar-nav li a {
-  color: #eee;
-}
-
 .sidebar .navbar-nav li a {
-  color: #333;
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  font-size: 0.7em;
 }
-
-/* Sick animations */
-.rotate{
-    -moz-transition: all 400ms;
-    -webkit-transition: all 400ms;
-    transition: all 400ms;
-}
-
-.rotate.down{
-    -ms-transform:rotate(90deg);
-    -moz-transform:rotate(90deg);
-    -webkit-transform:rotate(90deg);
-    transform:rotate(90deg);
-}
-
