--- a/style.css
+++ b/style.css
@@ -106,7 +106,16 @@ body {
   background-size: cover;
 }
 
-.img-fluid {
-  max-height: 300px;
+.card {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  background-color: rgb(255, 255, 255);
+  padding: 20px;
+  margin: 20px auto;
+  max-width: 60vw;
+}
+
+.row-fix {
+  padding-left: 30px;
+  width: 100%;
 }
 
