--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -39,16 +39,37 @@
   background-color: rgb(0, 137, 96);
 }
 
-.sidebar .nav-link {
-  border-radius: 0;
-}
-
-a:link {
-    text-decoration: none;
-}
-
 .sidebar .navbar-nav li a {
   color: rgb(255, 255, 255);
   text-transform: uppercase;
+  font-size: 0.7em;
+  padding: 0;
+}
+
+.sidebar .navbar-nav li .nav-item a {
+  font-size: 0.5em;
+  color: rgb(200, 200, 200);
+  padding-bottom: 5px;
+}
+
+.sidebar .navbar-nav li .nav-item.active a {
+  color: rgb(255, 255, 255);
+}
+
+#collapsedSidebar {
+  background-color: rgb(240, 240, 240);
+}
+
+#collapsedSidebar a {
+  font-size: 0.8em;
+  margin: 5px;
+}
+
+#collapsedSidebar .flex-column {
+  margin: 5px;
+  background-color: rgb(230, 230, 230);
+}
+
+#collapsedSidebar .flex-column a {
   font-size: 0.7em;
 }
