--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -33,6 +33,8 @@
   width: 100%;
   padding-left: 10px;
   padding-right: 20px;
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
 }
 
 .sidebar .nav-item.active{
