First implementation of login

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -29,4 +29,36 @@ p {
   height: 100%;
 }
 
+.recaptcha-container {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
 
+.login-form-container {
+  margin: 0.5rem;
+  margin-top: 2rem;
+}
+
+#register-form {
+  margin: 1rem;
+  margin-top: 2rem;
+}
+
+.form-row {
+  display: block;
+  margin-top: 1rem;
+}
+
+.form-row label {
+  display: block;
+  margin-bottom: 0;
+}
+
+.form-row .radio {
+  margin-right: 1rem;
+  display: inline-block;
+}
+
+.form-row input {
+  margin-right: 0.5rem;
+}
