--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -29,6 +29,17 @@ p {
   height: 100%;
 }
 
+.rotate180 {
+  -ms-transform: rotate(180deg); /* IE 9 */
+  -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+  transform: rotate(180deg);
+}
+
+img.center {
+  display: block;
+  margin: 0 auto;
+}
+
 
 /*
  * Signup and registration styles
