--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -10,10 +10,18 @@
 
 .navbar-brand {
   padding: 0px;
-  margin-left: 2vw;
+  margin-left: 1vw;
 }
 .navbar-brand>img {
   height: 45px;
+}
+
+.navbar #accordion {
+  margin-bottom: 10px;
+}
+
+.superhidden {
+  display: none !important;
 }
 
 /* Nav links */
@@ -22,11 +30,15 @@
   font-size: 36px;
   margin-top: -5px;
   margin-bottom: -5px;
-  padding-left: 2vw;
-  padding-right: 2vw;
+  padding-left: 1vw;
+  padding-right: 1vw;
   font-family: coves;
 }
 
+.navbar .nav-lang {
+  color: rgb(11, 163, 96);
+  padding: 0rem 0.1rem;
+}
 
 .navbar .nav-link {
   color: rgb(11, 163, 96);
@@ -40,32 +52,33 @@
   color: rgb(11, 163, 96);
 }
 
+@media (min-width: 768px) {
+  .navbar .nav-link:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 5px;
+    left: 0;
+    background-color: rgb(11, 163, 96);
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+  }
 
-.navbar .nav-link:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: 5px;
-  left: 0;
-  background-color: rgb(11, 163, 96);
-  visibility: hidden;
-  -webkit-transform: scaleX(0);
-  transform: scaleX(0);
-  -webkit-transition: all 0.3s ease-in-out 0s;
-  transition: all 0.3s ease-in-out 0s;
-}
+  .active>.nav-link:before,
+  .navbar .nav-link:hover:before,
+  .nav-item:focus {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+  }
 
-.active>.nav-link:before,
-.navbar .nav-link:hover:before,
-.nav-item:focus {
-  visibility: visible;
-  -webkit-transform: scaleX(1);
-  transform: scaleX(1);
-}
-
-button:focus {
-  outline: none;
+  button:focus {
+    outline: none;
+  }
 }
 
 
