--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -14,6 +14,11 @@
   box-shadow: -15px 0px 20px 10px #000;
 }
 
+hr {
+  width: 90%;
+  background-color: rgb(200, 200, 200);
+}
+
 .logotext {
   width: 100%;
   background-color: rgb(31, 56, 63);
