--- a/style.css
+++ b/style.css
@@ -17,6 +17,13 @@ body {
   min-height: 100%;
 }
 
+.preload * {
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -ms-transition: none !important;
+  -o-transition: none !important;
+  transition: none !important;
+}
 
 
 /*
