--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -51,6 +51,8 @@ hr {
   text-transform: uppercase;
   font-size: 0.7em;
   padding: 0;
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s;
 }
 
 .sidebar .navbar-nav li .nav-item a {
@@ -59,7 +61,15 @@ hr {
   padding-bottom: 5px;
 }
 
-.sidebar .navbar-nav li .nav-item.active a {
+.sidebar .navbar-nav li .nav-item a:hover,
+.sidebar .navbar-nav li a:hover {
+  color: rgb(255, 255, 255);
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s;
+}
+
+.sidebar .navbar-nav li .nav-item.active a,
+.sidebar .navbar-nav li.active>a {
   color: rgb(255, 255, 255);
 }
 
