--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -83,6 +83,41 @@
 }
 
 @media (max-width: 768px) {
+  .navbar .nav-link:before {
+    content: "";
+    position: absolute;
+    width: 40%;
+    height: 2px;
+    bottom: 5px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    background-color: rgb(11, 163, 96);
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+  }
+
+  .active>.nav-link:before,
+  .navbar .nav-link:hover:before,
+  .nav-item:focus {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+  }
+
+  .navbar .nav-item.panel>.nav-link:before {
+    visibility: hidden;
+  }
+
+  button:focus {
+    outline: none;
+  }
+}
+
+@media (max-width: 768px) {
   #collapsingNavbar {
     max-height: 80vh;
     overflow: auto;
