--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -5,12 +5,20 @@
 
 h1 {
   margin: 10px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 4em;
+  font-family: opensans;
+  text-transform: uppercase;
+  font-size: 3.5em;
   font-weight: normal;
   color: #333;
   border-bottom: 2px solid black;
   text-shadow: none;
+  margin: 0 -2vw;
+}
+
+@media (max-width: 1200px) and (min-width: 768px){
+  h1 {
+    font-size: 2.5em;
+  }
 }
 
 p {
@@ -21,8 +29,8 @@ p {
 .content-page {
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   min-height: 50vh;
-  padding: 40px;
-  padding-top: 20px;
+  padding: 5vh 8vw;
+  padding-top: 30px;
   margin-top: 80px;
   margin-bottom: 80px;
   background-color: rgb(255, 255, 255);
@@ -38,6 +46,20 @@ p {
 img.center {
   display: block;
   margin: 0 auto;
+}
+
+.person {
+  max-width: 50vw;
+  margin: auto;
+  padding: 0 0 20px 0;
+}
+
+.person-img {
+  padding: 1vw 1vw 10px 1vw;
+}
+
+.person-img > img {
+  box-shadow: 0 0 20px rgba(0,0,0,0.20)
 }
 
 
