--- a/assets/css/yrityksille.css
+++ b/assets/css/yrityksille.css
@@ -9,7 +9,7 @@
     
     .jumbotron
     {
-        background: url(http://localhost/wp-content/themes/suurinkubio/assets/images/frontpage/etu.jpg) center center;
+        background: url("../images/frontpage/etu.jpg") center center;
         background-size: cover;
         border-radius: 0;
         height: 800px;
@@ -67,8 +67,9 @@
     
     .flip-container 
     {
-        perspective: :1000px;
+        perspective: 1000px;
         margin: 5px 25px;
+        box-shadow: 0 5px 10px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     }
     
     .flip-container:hover
@@ -89,7 +90,6 @@
         transition: 0.6s;
         transform-style: preserve-3d;
         background-color: white;
-        box-shadow: 0 5px 10px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
         border-radius: 7px;
         position: relative;
         
