--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -31,10 +31,13 @@ p {
   min-height: 50vh;
   padding: 5vh 8vw;
   padding-top: 30px;
-  margin-top: 80px;
-  margin-bottom: 80px;
   background-color: rgb(255, 255, 255);
   height: 100%;
+}
+
+.content-container {
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
 .rotate180 {
