--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -51,6 +51,10 @@ img.center {
   margin: 0 auto;
 }
 
+
+/*
+ * Committee pages styles
+ */
 .person {
   max-width: 50vw;
   margin: auto;
@@ -65,6 +69,28 @@ img.center {
   box-shadow: 0 0 20px rgba(0,0,0,0.20)
 }
 
+.committee-list {
+  list-style-type: none;
+  margin-top: 80px;
+  margin-left: -4vw;
+  margin-right: -2vw;
+}
+
+.committee-item {
+  margin-top: 20px;
+  margin-left: -20px;
+  margin-right: -20px;
+  padding: 15px 20px 10px 25px;
+  border-color: #0ba360;
+  border-width: 2px;
+  border-style: solid;
+  border-radius: 10px;
+  background-color: #F7F7F7;
+}
+
+.committee-item > a {
+  font-size: 1.8em;
+}
 
 /*
  * Signup and registration styles
