--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -4,7 +4,6 @@
 }
 
 h1 {
-  margin: 10px;
   font-family: opensans;
   text-transform: uppercase;
   font-size: 3.5em;
@@ -12,7 +11,7 @@ h1 {
   color: #333;
   border-bottom: 2px solid black;
   text-shadow: none;
-  margin: 0 -2vw;
+  margin: 10px -2vw;
 }
 
 @media (max-width: 1200px) and (min-width: 768px){
