--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -68,14 +68,14 @@ img.center {
   box-shadow: 0 0 20px rgba(0,0,0,0.20)
 }
 
-.committee-list {
+.folding-list {
   list-style-type: none;
   margin-top: 80px;
   margin-left: -4vw;
   margin-right: -2vw;
 }
 
-.committee-item {
+.folding-item {
   margin-top: 20px;
   margin-left: -20px;
   margin-right: -20px;
@@ -87,7 +87,7 @@ img.center {
   background-color: #F7F7F7;
 }
 
-.committee-item > a {
+.folding-item > a {
   font-size: 1.8em;
 }
 
