Change color to shadow

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -84,7 +84,7 @@ img.center {
   border-width: 2px;
   border-style: solid;
   border-radius: 10px;
-  background-color: #F7F7F7;
+  box-shadow: 0 0 20px rgba(0,0,0,0.17)
 }
 
 .folding-item > a {
