--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   padding-top: 60px; /* Navbar height */
   position: relative;
   min-height: 100%;
+  font-family: opensans;
 }
 
 .preload * {
