--- a/assets/css/abeille.css
+++ b/assets/css/abeille.css
@@ -6,9 +6,10 @@
         background-size: cover;
         border-radius: 0;
         height: 800px;
-        box-shadow: inset 0px 0px 0px 1000px rgba(35,172,120,0.7);
+        box-shadow: inset 0px 0px 0px 1000px rgba(35,172,120,0.7), 0px 0px 40px -6px #000;
         margin-bottom: 0px;
         margin-right: 0px;
+        position: relative;
     }
     
     .jumbotron-text
@@ -33,7 +34,7 @@
     {    
         box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
         min-height: 50vh;
-        padding: 20px;
+        padding: 40px;
         padding-top: 20px;
         margin-top: 80px;
         margin-bottom: 80px;
@@ -59,25 +60,32 @@
     {
         background-color: white;
         border-bottom: none;
+        padding: 0;
     }
     
     #accordion > .card, #accordion2 > .card 
     {
         box-shadow: none;
         border-width: 2px;
+        border-radius: 10px;
     }
                 
     a 
     {
         color: #0ba360;
-        text-decoration: none; 
+        text-decoration: none;
     }
-    
+
     a:hover, a:active 
     {
         color: forestgreen;
         text-decoration: none; 
         color: 
+    }
+
+    .mb-0 {
+        text-transform: uppercase;
+        font-size: 1.7rem;
     }
     
     .esim
@@ -100,9 +108,7 @@
         border-radius: 50%;
         width: 300px;
         height: 300px;
-        background-image: -moz-radial-gradient(90px 180px 450deg, circle cover, yellow 0%, orange 100%, red 95%);
-        background-image: -webkit-radial-gradient(90px 180px, circle cover, #0CA461, #3BB991);
-        background-image: radial-gradient(90px 180px 45deg, circle cover, yellow 0%, orange 100%, red 95%);
+        background-image: linear-gradient(90deg, #0CA461, #3BB991);
         box-shadow: 5px 10px 10px rgba(0,0,0,0.5);
     }
     
@@ -115,6 +121,7 @@
         z-index: 3;
         color: white;
         font-size: 25px;
+        text-transform: uppercase;
     }
     
     .link 
