--- a/assets/css/abeille.css
+++ b/assets/css/abeille.css
@@ -34,8 +34,7 @@
     {    
         box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
         min-height: 50vh;
-        padding: 40px;
-        padding-top: 20px;
+        padding: 50px 40px;
         margin-top: 80px;
         margin-bottom: 80px;
         background-color: rgb(255, 255, 255);
