--- a/assets/css/text.css
+++ b/assets/css/text.css
@@ -50,6 +50,7 @@ h2 {
   letter-spacing: 5px;
   color:rgb(255, 255, 255);
   text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  text-transform: uppercase;
 }
 
 h3 {
