--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -1,3 +1,26 @@
+@media (max-width: 1200px) {
+    h1 {
+        font-size: 6em;
+    }
+}
+@media (max-width: 768px) {
+    h1 {
+        font-size: 5em;
+    }
+    h2 {
+        font-size: 1.5em;
+    }
+}
+@media (max-width: 576px) {
+    h1 {
+        font-size: 4em;
+    }
+    h2 {
+        font-size: 1.3em;
+    }
+
+}
+
 
 .header3 {
     font-size: 25px;
