Styling and responsiveness updates

--- a/assets/css/yrityksille.css
+++ b/assets/css/yrityksille.css
@@ -189,7 +189,12 @@
 =====================================================================================*/
     .fig img
     {
+        margin-top: 40px;
         box-shadow: 0px 10px 10px rgba(0,0,0,0.5);
+    }
+
+    .fig .card-title {
+        margin: 3px;
     }
 /*=====================================================================================  End for contact section styles
 =====================================================================================*/
