--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -13,7 +13,7 @@
   margin-left: 1vw;
 }
 .navbar-brand>img {
-  height: 45px;
+  height: 35px;
 }
 
 .navbar #accordion {
@@ -27,7 +27,7 @@
 /* Nav links */
 .navbar .nav-item {
   font-weight: 500;
-  font-size: 36px;
+  font-size: 30px;
   margin-top: -5px;
   margin-bottom: -5px;
   padding-left: 1vw;
@@ -133,9 +133,7 @@
  */
 
 .hamburger {
-  padding: 15px 15px;
-  padding-bottom: 5px;
-  padding-top: 10px;
+  padding: 5px 15px 0 15px;
   display: inline-block;
   cursor: pointer;
   transition-property: opacity, filter;
