--- a/style.css
+++ b/style.css
@@ -136,3 +136,9 @@ body {
   width: 100%;
 }
 
+.fa {
+  transition: .3s transform ease-in-out;
+}
+.collapsed .fa {
+  transform: rotate(-90deg);
+}
