--- a/assets/css/guild-front.css
+++ b/assets/css/guild-front.css
@@ -67,13 +67,16 @@ h1 {
 }
 
 .link-list {
-    margin-top: 35px;
+    margin-top: 10px;
+    margin-bottom: 0;
     font-size: 1.8em;
     list-style-type: none;
 }
 
 .link-list li {
-    margin-top: 30px;
+    padding-top: 15px;
+    margin-bottom: 0;
+    height: 79px;
 }
 
 .social-media {
