--- a/assets/css/guild-front.css
+++ b/assets/css/guild-front.css
@@ -61,7 +61,8 @@ h1 {
 }
 
 .calendar-link {
-    margin-left: 30px;
+    margin-left: -15px;
+    padding-left: 4vw;
     margin-bottom: 15px;
     font-size: 1.3em;
 }
@@ -69,6 +70,8 @@ h1 {
 .link-list {
     margin-top: 10px;
     margin-bottom: 0;
+    margin-left: -15px;
+    padding-left: 4vw;
     font-size: 1.8em;
     list-style-type: none;
 }
@@ -100,6 +103,11 @@ h1 {
 
 
 /* Calendar special stylings */
+.simcal-calendar {
+    padding-left: 4vw;
+    margin-left: -15px;
+}
+
 .simcal-align-right {
     display: none;
 }
@@ -111,8 +119,10 @@ h1 {
 
 .simcal-event-details p {
     margin-bottom: 0 !important;
+    padding-left: 0;
 }
 
 ul.simcal-events {
-    padding-left: 10px;
+    padding-left: 0;
+    margin-left: 0 !important;
 }
