--- a/assets/css/yrityksille.css
+++ b/assets/css/yrityksille.css
@@ -43,7 +43,8 @@
         color: #444;
     }
     .question {
-        font-size: 50px;
+        font-size: 43px;
+        font-weight: 500;
     }
     
 /*=====================================================================================   End for twisted content styles
