--- a/style.css
+++ b/style.css
@@ -106,7 +106,8 @@ body {
 .title {
   font-family: coves;
   text-transform: uppercase;
-  font-size: 3em;
+  font-size: 2.5em;
+  font-weight: 900;
   border-bottom: 2px solid #555;
   margin-bottom: 20px;
 }
