--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -6,12 +6,13 @@
 h1 {
   font-family: opensans;
   text-transform: uppercase;
-  font-size: 3.5em;
+  font-size: 2.5em;
   font-weight: normal;
   color: #333;
   border-bottom: 2px solid black;
   text-shadow: none;
-  margin: 10px -2vw;
+  margin: 30px -2vw 20px -2vw;
+  display: inline-block;
 }
 
 h2 {
@@ -25,7 +26,10 @@ h2 {
 
 @media (max-width: 1200px) {
   h1 {
-    font-size: 2.5em;
+    font-size: 2em;
+  }
+  h2 {
+    font-size: 1.5em;
   }
 }
 
