--- a/style.css
+++ b/style.css
@@ -125,6 +125,26 @@ body {
   background-size: cover;
 }
 
+.front-img {
+  box-shadow: 0px 0px 30px rgba(0,0,0,0.25);
+}
+
+.shadow-overlay {
+  position: absolute;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  border-radius: 1000px;
+  box-shadow: inset 0px 0px 0px 1000px rgba(35,172,120,0.5);
+}
+
+.no-padding {
+  padding: 0;
+}
+
 .card {
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   background-color: rgb(255, 255, 255);
