Fix sidebar falling under footer

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -40,7 +40,7 @@ p {
 
 .content-page {
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-  min-height: 50vh;
+  min-height: 450px;
   padding: 5vh 8vw;
   padding-top: 30px;
   background-color: rgb(255, 255, 255);
