Font styling fixes

--- a/assets/css/yrityksille.css
+++ b/assets/css/yrityksille.css
@@ -43,7 +43,7 @@
         color: #444;
     }
     .question {
-        font-size: 43px;
+        font-size: 1.3em;
         font-weight: 500;
     }
     
