Page table styling

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -38,6 +38,10 @@ p {
   margin-top: 20px;
 }
 
+table {
+  padding: 10px;
+}
+
 .content-page {
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   min-height: 450px;
