--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -42,6 +42,11 @@ table {
   margin-left: 10px;
 }
 
+img[class*="wp-image-"] {
+  max-width: 100%;
+  height: auto;
+}
+
 .content-page {
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   min-height: 450px;
