--- a/assets/css/abeille.css
+++ b/assets/css/abeille.css
@@ -52,8 +52,10 @@
     
     .esim
     {
-        font-size: 25px; 
-        letter-spacing: 2px;
+        font-size: 25px;
+        color: #444;
+        font-weight: 600;
+        line-height: 0.8;
     }
     
 /*=============== SECOND "A4-PAGE" STYLES ==================================================*/
