Small front fixes

--- a/assets/css/yrityksille.css
+++ b/assets/css/yrityksille.css
@@ -3,7 +3,7 @@
     
     .jumbotron
     {
-        background: url("../images/frontpage/etu.jpg") center center;
+        background: url("../images/frontpage/sharp-students-looking-sharp.jpg") center center;
         background-size: cover;
         border-radius: 0;
         height: 800px;
