--- a/assets/css/guild-front.css
+++ b/assets/css/guild-front.css
@@ -40,6 +40,8 @@ h1 {
     text-shadow: 0px 0px 30px rgba(0, 0, 0, 0.4);
     font-family: coves;
     font-weight: 900;
+    text-align: center;
+    width: 90%;
 }
 
 .post-column {
