Post style update

--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -21,6 +21,8 @@
 
 .post-info {
   margin-left: -2vw;
+  margin-top: -15px;
+  margin-bottom: -10px;
   font-family: coves;
   font-weight: 500;
   font-size: 1.2em;
