--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -173,6 +173,7 @@ form, .account-container {
 
 .snapsi {
   width: 100%;
+  max-width: 300px;
   margin-bottom: 20px;
   transition-duration: 0.4s;
   box-shadow: 0 0 20px rgba(0,0,0,0.19);
