--- a/style.css
+++ b/style.css
@@ -123,6 +123,19 @@ body {
   background-attachment: center;
   background-position: center;
   background-size: cover;
+  overflow: hidden;
+}
+
+.bg-video {
+  position: absolute;
+  object-fit: fill;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 }
 
 .front-img {
