--- a/style.css
+++ b/style.css
@@ -126,13 +126,12 @@ body {
   overflow: hidden;
 }
 
-.bg-video {
-  position: absolute;
-  object-fit: fill;
+.bg-video video {
   min-width: 100%;
   min-height: 100%;
   width: auto;
   height: auto;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
