--- a/style.css
+++ b/style.css
@@ -175,3 +175,36 @@ body {
 .collapsed .fa {
   transform: rotate(-90deg);
 }
+
+/*
+ * Dialog styling
+ */
+
+.dialog {
+  position: absolute;
+  background: #FFF;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  padding: 20px 30px;
+  margin-left: 30px;
+  margin-top: calc(-10vh + 40px);
+  display: inline-block
+}
+
+.dialog:before{
+  content: "";
+  position: absolute;
+  top: -30px;
+  left: 30px;
+  z-index: 1;
+  border: solid 15px transparent;
+  border-bottom-color: #FFF;
+}
+
+.dialog > a {
+  color: rgb(68, 187, 133);
+  font-family: coves;
+  font-size: 2.5em;
+  text-decoration: none;
+}
